--- a/themes/up-business-theme/layouts/partials/sections/brands.html
+++ b/themes/up-business-theme/layouts/partials/sections/brands.html
@@ -14,6 +14,9 @@
       <div class="col px-5 my-2 text-center">
         <img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Socios.com_logo.svg" alt="">
       </div>
+      <div class="col px-5 my-2 text-center">
+        <img src="https://statics.shadow.tech/cbp/svg/logos/shadow-gradient.svg" alt="">
+      </div>
     </div>
   </div>
 </section>
