--- a/themes/up-business-theme/layouts/partials/sections/services.html
+++ b/themes/up-business-theme/layouts/partials/sections/services.html
@@ -6,7 +6,9 @@
           <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
         {{ end }}
         {{ with .content.text }}
-          <p class="text-black-61 text-center pb-3">{{ . }}</p>
+          <p class="text-black-61 text-center pb-3">Mon approche ? Une immersion totale dans votre écosystème et vos enjeux. En dialogue constant avec vous et vos équipes, j'élabore pas à pas la solution adaptée. <br>
+            Cela passe notamment par la création d'API intelligentes, capables de dialoguer avec vos différents systèmes pour automatiser les tâches chronophages.
+            Constamment à l'affût des technologies les plus innovantes, je m'attache à identifier les outils qui permettront de résoudre en profondeur les problématiques auxquelles font face vos équipes :</p>
         {{ end }}
       </div>
     </div>
@@ -15,9 +17,16 @@
         <div class="card bg-blue-16 border-0 border-radius-34 p-4">
           <div class="card-body text-center">
             <h4 class="card-title text-center text-primary pb-4">Offre Découverte : "Objectif Automatisation"</h4>
-            <p class="card-text text-black-61 pb-4">
-              - Étudier votre contexte, vos priorités et vos attentes en termes d'automatisation. Nous définissons ensemble le périmètre sur lequel intervenir.
-            </p>
+            <table class="table">
+              <tr>
+                  <td>
+                      (Call 2h) Étudier votre contexte, vos priorités et vos attentes en termes d'automatisation. Nous définissons ensemble le périmètre sur lequel intervenir.
+                  </td>
+              </tr>
+          </table>
+          </div>
+          <div class="card-footer text-center">
+            à partir de 350€ HT
           </div>
         </div>
       </div>
@@ -26,13 +35,36 @@
         <div class="card bg-blue-16 border-0 border-radius-34 p-4">
           <div class="card-body text-center">
             <h4 class="card-title text-center text-primary pb-4">Offre Pilote : "Automatisation Quick Wins"</h4>
-            <ul class="card-text text-black-61 pb-4">
-              <li>Offre "Audit Automatisation"</li>
-              <li>Sélection avec le client jusqu'à 3 processus à automatiser en priorité, parmi les quick wins identifiés lors de l'audit</li>
-              <li>Prototypage des workflows d'automatisation et intégration avec les outils existants de la PME</li>
-              <li>Déploiement des automatisations en production et formation des utilisateurs</li>
-              <li>Suivi sur 2 mois pour évaluer les gains réels, collecter les feedbacks et optimiser les workflows si besoin.</li>
-            </ul>
+            <table class="table">
+              <tr>
+                  <td>
+                    Offre "Audit Automatisation" +
+                  </td>
+              </tr>
+              <tr>
+                <td>
+                   3 process à automatiser en priorité, parmi les quick wins identifiés lors de l'audit.
+                </td>
+            </tr>
+            <tr>
+              <td>
+                Prototypage des workflows d'automatisation et intégration avec les outils existants
+              </td>
+          </tr>
+          <tr>
+            <td>
+              Déploiement des automatisations en production et formation des utilisateurs
+            </td>
+        </tr>
+        <tr>
+          <td>
+            Suivi sur 2 mois pour évaluer les gains réels, collecter les feedbacks et optimiser les workflows si besoin.
+          </td>
+      </tr>
+          </table>
+          <div class="card-footer text-center">
+            à partir de 2450€ HT
+          </div>
           </div>
         </div>
       </div>
@@ -41,11 +73,36 @@
         <div class="card bg-blue-16 border-0 border-radius-34 p-4">
           <div class="card-body text-center">
             <h4 class="card-title text-center text-primary pb-4">Offre Pilote : "Automatisation et Intégration Globale"</h4>
-            <ul class="card-text text-black-61 pb-4">
-              <li>Automatisation Quick Wins</li>
-              <li>Sélection avec la PME jusqu'à 5 processus à automatiser en priorité, parmi les quick wins identifiés lors de l'audit</li>
-              <li>Suivi sur 6 mois pour évaluer les gains réels, collecter les feedbacks et optimiser les workflows si besoin</li>
-            </ul>
+            <table class="table">
+              <tr>
+                  <td>
+                    Offre "Audit Automatisation" +
+                  </td>
+              </tr>
+              <tr>
+                <td>
+                   5 process à automatiser en priorité, parmi les quick wins identifiés lors de l'audit.
+                </td>
+            </tr>
+            <tr>
+              <td>
+                Prototypage des workflows d'automatisation et intégration avec les outils existants
+              </td>
+          </tr>
+          <tr>
+            <td>
+              Déploiement des automatisations en production et formation des utilisateurs
+            </td>
+        </tr>
+        <tr>
+          <td>
+            Suivi sur 6 mois pour évaluer les gains réels, collecter les feedbacks et optimiser les workflows si besoin.
+          </td>
+      </tr>
+          </table>
+            <div class="card-footer text-center">
+              à partir de 4500 € HT
+            </div>
           </div>
         </div>
       </div>
