--- a/themes/up-business-theme/layouts/partials/sections/services.html
+++ b/themes/up-business-theme/layouts/partials/sections/services.html
@@ -72,7 +72,7 @@
       <div class="col-12 col-xl-4">
         <div class="card bg-blue-16 border-0 border-radius-34 p-4">
           <div class="card-body text-center">
-            <h4 class="card-title text-center text-primary pb-4">Offre Pilote : "Automatisation et Intégration Globale"</h4>
+            <h4 class="card-title text-center text-primary pb-4">Offre Premium : "Automatisation et Intégration Globale"</h4>
             <table class="table">
               <tr>
                   <td>
