--- a/themes/up-business-theme/layouts/partials/sections/services.html
+++ b/themes/up-business-theme/layouts/partials/sections/services.html
@@ -20,13 +20,16 @@
             <table class="table">
               <tr>
                   <td>
-                      (Call 2h) Étudier votre contexte, vos priorités et vos attentes en termes d'automatisation. Nous définissons ensemble le périmètre sur lequel intervenir.
+                      (Call 2h) Call de cadrage - Étudier votre contexte, vos priorités et vos attentes en termes d'automatisation. Nous définissons ensemble le périmètre sur lequel intervenir.
+                  </td>
+                  <td>
+                      Cartographie de vos flux de données et identification des opportunités d'automatisation.
                   </td>
               </tr>
           </table>
           </div>
           <div class="card-footer text-center">
-            à partir de 550€ HT
+            à partir de 500€ HT
           </div>
         </div>
       </div>
