--- a/themes/up-business-theme/layouts/partials/sections/services.html
+++ b/themes/up-business-theme/layouts/partials/sections/services.html
@@ -7,8 +7,7 @@
         {{ end }}
         {{ with .content.text }}
           <p class="text-black-61 text-center pb-3">Mon approche ? Une immersion totale dans votre écosystème et vos enjeux. En dialogue constant avec vous et vos équipes, j'élabore pas à pas la solution adaptée. <br>
-            Cela passe notamment par la création d'API intelligentes, capables de dialoguer avec vos différents systèmes pour automatiser les tâches chronophages.
-            Constamment à l'affût des technologies les plus innovantes, je m'attache à identifier les outils qui permettront de résoudre en profondeur les problématiques auxquelles font face vos équipes :</p>
+            Cela passe notamment par la création d'API intelligentes, capables de dialoguer avec vos différents systèmes pour automatiser les tâches chronophages.</p>
         {{ end }}
       </div>
     </div>
@@ -22,6 +21,8 @@
                   <td>
                       (Call 2h) Call de cadrage - Étudier votre contexte, vos priorités et vos attentes en termes d'automatisation. Nous définissons ensemble le périmètre sur lequel intervenir.
                   </td>
+              </tr>
+              <tr>
                   <td>
                       Cartographie de vos flux de données et identification des opportunités d'automatisation.
                   </td>
@@ -29,7 +30,7 @@
           </table>
           </div>
           <div class="card-footer text-center">
-            à partir de 500€ HT
+            430€ HT
           </div>
         </div>
       </div>
@@ -66,7 +67,7 @@
       </tr>
           </table>
           <div class="card-footer text-center">
-            à partir de 3450€ HT
+            à partir de 6300€ HT
           </div>
           </div>
         </div>
@@ -104,7 +105,7 @@
       </tr>
           </table>
             <div class="card-footer text-center">
-              à partir de 5500 € HT
+              à partir de 6900 € HT
             </div>
           </div>
         </div>
