--- a/themes/up-business-theme/layouts/partials/sections/services.html
+++ b/themes/up-business-theme/layouts/partials/sections/services.html
@@ -15,7 +15,7 @@
       <div class="col-12 col-xl-4">
         <div class="card bg-blue-16 border-0 border-radius-34 p-4">
           <div class="card-body text-center">
-            <h4 class="card-title text-center text-primary pb-4">Offre Découverte : "Objectif Automatisation"</h4>
+            <h4 class="card-title text-center text-primary pb-4">Offre découverte : <br><strong>Objectif automatisation</strong></h4>
             <table class="table">
               <tr>
                   <td>
@@ -38,11 +38,11 @@
       <div class="col-12 col-xl-4">
         <div class="card bg-blue-16 border-0 border-radius-34 p-4">
           <div class="card-body text-center">
-            <h4 class="card-title text-center text-primary pb-4">Offre Pilote : "Automatisation Quick Wins"</h4>
+            <h4 class="card-title text-center text-primary pb-4">Offre pilote : <br><strong>Automatisation quick wins</strong></h4>
             <table class="table">
               <tr>
                   <td>
-                    Offre "Audit Automatisation" +
+                    "Offre découverte" +
                   </td>
               </tr>
               <tr>
@@ -76,11 +76,11 @@
       <div class="col-12 col-xl-4">
         <div class="card bg-blue-16 border-0 border-radius-34 p-4">
           <div class="card-body text-center">
-            <h4 class="card-title text-center text-primary pb-4">Offre Premium : "Automatisation et Intégration Globale"</h4>
+            <h4 class="card-title text-center text-primary pb-4">Offre premium : <strong>Automatisation et intégration globale</strong></h4>
             <table class="table">
               <tr>
                   <td>
-                    Offre "Audit Automatisation" +
+                    "Offre découverte" +
                   </td>
               </tr>
               <tr>
