--- a/themes/up-business-theme/layouts/partials/sections/services.html
+++ b/themes/up-business-theme/layouts/partials/sections/services.html
@@ -50,14 +50,9 @@
                    3 process à automatiser en priorité, parmi les quick wins identifiés lors de l'audit.
                 </td>
             </tr>
-            <tr>
-              <td>
-                Prototypage des workflows d'automatisation et intégration avec les outils existants
-              </td>
-          </tr>
           <tr>
             <td>
-              Déploiement des automatisations en production et formation des utilisateurs
+              Mise en place SAAS workflow (n8n,zapier,make.com, IFTTT, mercure.rocks), paramétrage des I/O.
             </td>
         </tr>
         <tr>
@@ -88,6 +83,9 @@
                    5 process à automatiser en priorité, parmi les quick wins identifiés lors de l'audit.
                 </td>
             </tr>
+            <td>
+              Mise en place SAAS workflow (n8n,zapier,make.com, IFTTT, mercure.rocks), paramétrage des I/O.
+            </td>
             <tr>
               <td>
                 Prototypage des workflows d'automatisation et intégration avec les outils existants
